--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "bell-tree-flux",
-  "version": "0.9.0",
+  "version": "0.9.3",
   "description": "",
-  "main": "index.js",
+  "main": "./script/dist/main.js",
   "scripts": {
+    "build": "babel ./script/src --out-dir ./script/dist",
+    "watch": "babel ./script/src --out-dir ./script/dist --watch --source-maps-inline",
     "test": "echo \"Elorror: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "jBellTree",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "babel-cli": "^6.10.1",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "webpack": "^1.13.1"
+    "babel-preset-es2015": "^6.9.0"
   }
 }
